welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:2: error: not found: value outcome
	if ( tea<=5 || candy<=5 ) { outcome==0 }
                                    ^teaParty:4: error: not found: value outcome
     else if ( tea<=5 && candy<=5 ) { outcome==1 }
                                      ^teaParty:6: error: not found: value outcome
	else  { outcome==2 }
                ^